--- a/frontend/app/src/main/res/navigation/nav_main.xml
+++ b/frontend/app/src/main/res/navigation/nav_main.xml
@@ -95,6 +95,10 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <argument
+            android:name="requestId"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/friendRequestFragment"
