--- a/frontend/app/src/main/res/layout/layout_cta_own_profile.xml
+++ b/frontend/app/src/main/res/layout/layout_cta_own_profile.xml
@@ -13,10 +13,10 @@
         android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:text="This is your account..."
         android:textAlignment="center"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="This is your account..." />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
