--- a/frontend/app/src/main/res/layout/fragment_profile.xml
+++ b/frontend/app/src/main/res/layout/fragment_profile.xml
@@ -182,5 +182,5 @@
         android:layout_height="wrap_content"
         android:indeterminate="true"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
