--- a/frontend/app/src/main/res/navigation/nav_main.xml
+++ b/frontend/app/src/main/res/navigation/nav_main.xml
@@ -67,7 +67,16 @@
             android:id="@+id/action_profile_to_splash"
             app:destination="@id/splashFragment"
             app:popUpTo="@id/nav_main" />
+        <action
+            android:id="@+id/action_profile_to_edit"
+            app:destination="@id/editProfileFragment"/>
     </fragment>
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="id.emergence.wher.screen.profile.edit.EditProfileFragment"
+        android:label="EditProfile"
+        tools:layout="@layout/fragment_edit_profile"
+        />
     <fragment
         android:id="@+id/friendListFragment"
         android:name="id.emergence.wher.screen.friends.list.FriendListFragment"
