--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -38,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:transitionName="tabLayout"
         app:tabBackground="@drawable/tab_background_unselected"
         tools:background="@drawable/tab_background_unselected"
         tools:minHeight="?actionBarSize" />
