--- a/frontend/app/src/main/res/layout/fragment_profile.xml
+++ b/frontend/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:transitionName="tabLayout"
         app:tabBackground="@drawable/tab_color_selector"
         tools:background="@drawable/tab_background_unselected"
         tools:minHeight="?actionBarSize" />
