Final release frontend (#24)

--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.material.chip.Chip
+        android:id="@+id/chip_last_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -37,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:transitionName="tabLayout"
         app:tabBackground="@drawable/tab_background_unselected"
         tools:background="@drawable/tab_background_unselected"
         tools:minHeight="?actionBarSize" />
@@ -76,5 +78,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:shapeAppearanceOverlay="?shapeAppearanceCornerExtraLarge"
-        app:tint="@null" />
+        app:tint="@null"
+        tools:src="@drawable/ic_play" />
 </androidx.constraintlayout.widget.ConstraintLayout>
